Comments add on posts, strings.xml updated

--- a/app/src/main/res/layout/activity_create_post.xml
+++ b/app/src/main/res/layout/activity_create_post.xml
@@ -7,9 +7,10 @@
     android:background="#FFFFFF">
 
     <TextView
+        android:paddingTop="30dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Criar Publicação"
+        android:text="@string/create_post"
         android:textSize="24sp"
         android:textStyle="bold"
         android:layout_marginBottom="24dp"
@@ -21,7 +22,7 @@
         android:layout_height="200dp"
         android:background="#F5F5F5"
         android:padding="16dp"
-        android:hint="O que está a acontecer na tua escola?"
+        android:hint="@string/box_create_post"
         android:gravity="top|start"
         android:inputType="textMultiLine"
         android:layout_marginBottom="24dp"/>
@@ -30,7 +31,7 @@
         android:id="@+id/btnPublish"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Publicar"
+        android:text="@string/publish_post"
         android:backgroundTint="#6200EE"
         android:textColor="#FFFFFF"
         android:padding="12dp"/>
