--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,16 @@
+<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+    android:viewportWidth="103"
+    android:viewportHeight="189.63281">
+  <group android:scaleX="0.32480666"
+      android:scaleY="0.598"
+      android:translateX="34.772457"
+      android:translateY="38.116196">
+    <group android:translateY="144.98438">
+      <path android:pathData="M15.6875,-89.859375Q15.6875,-90.5625,14.984375,-90.5625L2.890625,-91.765625Q2.1875,-91.765625,2.1875,-92.46875L2.1875,-96.1875Q2.1875,-96.890625,2.890625,-96.890625L41.90625,-96.890625Q42.609375,-96.890625,42.609375,-96.1875L42.609375,-92.46875Q42.609375,-91.765625,41.90625,-91.765625L28.96875,-90.5625Q28.203125,-90.5625,28.203125,-89.859375L28.203125,-37.90625Q28.203125,-27.140625,29.390625,-21.3125Q30.3125,-16.8125,33.125,-13.578125Q40.640625,-4.921875,54.84375,-4.921875Q70.109375,-4.921875,77.625,-17.015625Q80.015625,-20.8125,80.796875,-28.90625Q81.21875,-33.265625,81.21875,-39.453125L81.21875,-89.859375Q81.21875,-90.5625,80.515625,-90.5625L68.28125,-91.765625Q67.578125,-91.765625,67.578125,-92.46875L67.578125,-96.1875Q67.578125,-96.890625,68.28125,-96.890625L101.671875,-96.890625Q102.375,-96.890625,102.375,-96.1875L102.375,-92.46875Q102.375,-91.765625,101.671875,-91.765625L89.859375,-90.5625Q89.15625,-90.5625,89.15625,-89.859375L89.15625,-40.015625Q89.15625,-16.390625,79.453125,-7.03125Q70.03125,2.046875,52.875,2.046875Q33.546875,2.046875,23.765625,-7.671875Q19.484375,-11.953125,17.859375,-16.59375Q15.6875,-22.859375,15.6875,-32.703125L15.6875,-89.859375Z"
+          android:fillColor="#FFFFFF"/>
+    </group>
+  </group>
 </vector>
