--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,9 +4,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="50dp"
+    android:paddingTop="25dp"
     android:paddingLeft="24dp"
     android:paddingRight="24dp"
+    android:paddingBottom="25dp"
     android:background="#F0F0F0">
 
     <androidx.recyclerview.widget.RecyclerView
