--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -7,20 +7,35 @@
     android:layout_marginBottom="4dp"
     android:background="#FAFAFA">
 
-    <TextView
-        android:id="@+id/commentUser"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Nome do Colega"
-        android:textStyle="bold"
-        android:textSize="14sp"
-        android:textColor="#000000" />
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/commentUser"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/comment_nome"
+            android:textStyle="bold"
+            android:textSize="14sp"
+            android:textColor="#000000" />
+
+        <TextView
+            android:id="@+id/commentDate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/comment_date"
+            android:gravity="end"
+            android:textSize="12sp"
+            android:textColor="#999999" />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/commentContent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Isso é muito interessante!"
+        android:text="@string/comment_content"
         android:textSize="14sp"
         android:textColor="#333333"
         android:layout_marginTop="2dp"/>
