- Adicionei verificação de email e username, para nao haver repetidos. - Username adiconado ao perfil, tanto pessoal como publico - Atualizar dados automaticamente

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="5dp"
+    android:fitsSystemWindows="true"
     tools:context=".MainActivity">
 
     <FrameLayout
@@ -22,6 +22,7 @@
         app:menu="@menu/bottom_nav_menu"
         app:itemIconTint="#6200EE"
         app:itemTextColor="#6200EE"
-        app:elevation="8dp" />
+        app:labelVisibilityMode="labeled"
+        app:elevation="16dp" />
 
 </RelativeLayout>
