--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -134,6 +134,15 @@
         android:layout_marginBottom="8dp"/>
 
     <Button
+        android:id="@+id/btnChangePassword"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Alterar Password"
+        android:backgroundTint="#CCCCCC"
+        android:textColor="#000000"
+        android:layout_marginBottom="8dp"/>
+
+    <Button
         android:id="@+id/btnLogout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
