adicionei pagina ForgotPasswordActivity

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:fillViewport="true"
     android:background="#FFFFFF"
+    android:fitsSystemWindows="true"
     tools:context=".LoginActivity">
 
     <LinearLayout
@@ -18,7 +19,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/login_title"
+            android:text="UniVerse"
             android:textSize="45sp"
             android:textStyle="bold"
             android:textColor="#6200EE"
@@ -27,7 +28,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/login_welcome_text"
+            android:text="Bem-vindo de volta, colega!"
             android:textSize="18sp"
             android:textColor="#757575"
             android:layout_marginBottom="48dp"/>
@@ -37,7 +38,7 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/login_hint_email"
+            android:hint="Email Institucional"
             app:startIconDrawable="@android:drawable/ic_dialog_email"
             app:errorEnabled="true"
             android:layout_marginBottom="8dp">
@@ -53,7 +54,7 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/login_hint_password"
+            android:hint="Password"
             app:startIconDrawable="@android:drawable/ic_lock_idle_lock"
             app:endIconMode="password_toggle"
             app:errorEnabled="true"
@@ -66,10 +67,10 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
-            android:id="@+id/textForgotPass"
+            android:id="@+id/tvForgotPassword"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/login_forgot_password"
+            android:text="Esqueceste-te da password?"
             android:textColor="#6200EE"
             android:layout_gravity="end"
             android:layout_marginBottom="24dp"
@@ -79,10 +80,11 @@
             android:id="@+id/btnLogin"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:text="@string/login_btn_entrar"
+            android:text="ENTRAR"
             android:textSize="18sp"
             android:textStyle="bold"
-            app:cornerRadius="8dp" />
+            app:cornerRadius="8dp"
+            android:backgroundTint="#6200EE"/>
 
         <ProgressBar
             android:id="@+id/loginProgressBar"
