--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -10,8 +10,8 @@
         android:id="@+id/search_bar"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="#F0F0F0"
-        android:hint="Pesquisar (Nome ou @user)..."
+        android:background="@drawable/bg_search_outline"
+        android:hint="Pesquisar"
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
         android:drawableStart="@android:drawable/ic_menu_search"
